# game-engine-components

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
content/shaders/lighting/: base.frag  base.vert
content/shaders/passes/: primary.frag  secondary.frag  secondary.vert
content/shaders/perspective/: base.vert
content/shaders/textures/: base.frag  base.vert
content/shaders/triangle/: base.vert
content/uniforms/shaders/: base.vert
include/glad/: glad.h
include/utils/files/: load.hpp
include/utils/geometry/: generate.hpp
include/utils/gl/: frame-buffer.hpp  geometry.hpp  resource.hpp  shader.hpp  texture-2d.hpp
sources/ecs/: CMakeLists.txt  main.cpp
sources/rendering/: CMakeLists.txt  glad.cpp  main.cpp
sources/rendering/01-triangle/: triangle.cpp  triangle.h
sources/rendering/02-uniforms/: uniforms.cpp  uniforms.h
sources/rendering/03-textures/: textures.cpp  textures.h
sources/rendering/gui/: imgui_impl_opengl3.cpp  nuklear_glfw_gl3.h  nuklear_glfw_gl4.h
sources/rendering/scenes/: base.h  lighting.cpp  lighting.h  passes.cpp  passes.h  perspective.cpp  perspective.h  scene.h  textures.cpp  textures.h  triangle.cpp  triangle.h  uniforms.cpp  uniforms.h
sources/rendering/scenes/01-triangle/: triangle.cpp  triangle.h
sources/rendering/scenes/02-uniforms/: uniforms.cpp  uniforms.h
sources/rendering/scenes/03-textures/: textures.cpp  textures.h
sources/rendering/scenes/04-perspective/: perspective.cpp  perspective.h
sources/rendering/scenes/05-passes/: passes.cpp  passes.h
sources/rendering/scenes/06-lighting/: lighting.cpp  lighting.h
sources/rendering/triangle/: triangle.cpp
